# forge-osh

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  TESTS.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: 01_project_overview.md  02_cli_config_and_providers.md  03_agent_loop_and_execution.md  04_tools_and_safety.md  05_tui_and_user_experience.md  06_sessions_memory_skills_and_hooks.md  07_graph_lsp_and_code_intelligence.md  08_mcp_workers_teams_and_goal_mode.md  09_data_files_persistence_and_runtime_paths.md  10_development_architecture_and_extension_guide.md
extensions/vscode/: .eslintrc.cjs  .gitignore  .vscodeignore  CHANGELOG.md  README.md  SETUP.md  esbuild.js  future_plan.md  package-lock.json  package.json  tsconfig.json
future_plan/: 01_long_clipboard_text_paste.md  02_prompt_caching_provider_architecture.md  03_skill_generation_from_conversation.md  04_plugins_and_mcp_servers.md  05_goal_integration.md  benchmarking.md  improvements.md  scaling.md  vsc_extension.md
scripts/: install.sh
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  types.rs
src/agent/: compaction.rs  context.rs  coordinator.rs  file_history.rs  hooks.rs  loop.rs  mod.rs  permissions.rs  planner.rs  skill_generation.rs  system_prompt.rs  team.rs  team_bus.rs  (+2 more)
tests/: EVALUATION_HARNESS.md  test_agent_loop.rs  test_compaction.rs  test_config.rs  test_context.rs  test_coordinator.rs  test_edit_robust.rs  test_error.rs  test_evaluation_harness.rs  test_file_history.rs  test_graph_builder.rs  test_graph_parser.rs  test_graph_query.rs  test_graph_types.rs  test_hooks.rs  test_models.rs  test_permissions.rs  test_planner.rs  test_provider_router.rs  test_runner.rs  test_session.rs  test_skills.rs  test_system_prompt.rs  test_tools_agent.rs  test_tools_code.rs  test_tools_executor.rs  test_tools_fs.rs  test_tools_git.rs  test_tools_notebook.rs  test_tools_registry.rs  test_tools_search.rs  test_tools_shell.rs  test_tools_tasks.rs  test_tools_web.rs  test_tui_diff.rs  test_tui_input.rs  test_tui_modals.rs  test_tui_picker.rs  test_tui_spinner.rs  test_tui_themes.rs  (+1 more)
(+103 files in other folders)
