[package]
name = "forge_agent"
version = "0.1.0"
edition = "2021"
authors = ["osh"]
description = "A universal Rust-based CLI coding agent"
license = "MIT"
keywords = ["ai", "cli", "coding-agent", "llm", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "forge-osh"
path = "src/main.rs"

[lib]
name = "forge_agent"
path = "src/lib.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# CLI & TUI
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html"] }
unicode-width = "0.2"
textwrap = "0.16"

# HTTP / Networking
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
url = "2"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File system
walkdir = "2"
glob = "0.3"
ignore = "0.4"
dirs = "5"
tempfile = "3"

# Text processing
regex = "1"
similar = { version = "2", features = ["unicode"] }
unicode-segmentation = "1"
strip-ansi-escapes = "0.2"
html2text = "0.12"
tiktoken-rs = "0.6"

# Security
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# Error handling & logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
ctrlc = { version = "3", features = ["termination"] }
which = "7"
open = "5"
rand = "0.8"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
